[package]
name = "bevy_wasm_dom"
version = "0.1.0"
edition = "2021"

# bevy unofficial cheetbook より

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib","rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_wgpu", "bevy_winit", "render", "x11","png"]}

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render","png"]}
bevy_webgl2 = "0.5"

[dependencies]
getrandom = "0.2.3"
rand = "0.8.4"
wasm-bindgen = "0.2.69"
